--- a/app/src/main/res/layout/activity_usb_unlock.xml
+++ b/app/src/main/res/layout/activity_usb_unlock.xml
@@ -1,19 +1,25 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#000000"
-    tools:context="com.example.android.digidoor_gate.FullscreenActivity">
+    tools:context="com.example.android.digidoor_gate.UsbUnlock">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
+
+    <Button android:id="@+id/button_lock"
+        android:layout_width="125dp"
+        android:layout_height="71dp"
+        android:text="@string/button_text"
+        android:layout_gravity="center" />
+
     <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="139dp"
         android:keepScreenOn="true"
         android:textColor="#fbfbff"
-        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
-        android:text="@string/dummy_content" />
-
-
+        android:textStyle="bold" android:textSize="36sp" android:gravity="center"
+        android:text="@string/gate_unlock"
+        android:layout_gravity="center_horizontal|top" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
