--- a/app/src/main/res/layout/activity_fullscreen2.xml
+++ b/app/src/main/res/layout/activity_fullscreen2.xml
@@ -7,37 +7,52 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
 
-    <Button android:id="@+id/button_lock"
-        android:layout_width="125dp"
-        android:layout_height="71dp"
-        android:text="@string/button_text"
-        android:layout_gravity="center" />
-    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
-        android:layout_height="139dp"
-        android:keepScreenOn="true"
-        android:textColor="#fbfbff"
-        android:textStyle="bold" android:textSize="36sp" android:gravity="center"
-        android:text="@string/gate_unlock"
-        android:layout_gravity="center_horizontal|top" />
+    <ViewFlipper
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewFlipper" >
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:weightSum="1">
 
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <!--<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-            &lt;!&ndash;<Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/dummy_button" />&ndash;&gt;
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/textView"
+                android:layout_weight="1.11" />
         </LinearLayout>
-    </FrameLayout>-->
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black"
+            android:weightSum="1">
+
+            <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:keepScreenOn="true"
+                android:textColor="#fbfbff"
+                android:textStyle="bold" android:textSize="38dp"
+                android:text="@string/gate_unlock"
+                android:layout_gravity="top|center_horizontal"
+                android:gravity="center_horizontal"
+                android:paddingTop="50dp" />
+
+            <Button android:id="@+id/button_lock"
+                android:layout_width="173dp"
+                android:layout_height="75dp"
+                android:text="@string/button_text"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:layout_weight="0.12"
+                android:textSize="25dp"
+                android:background="@drawable/button_black_white_rect" />
+        </LinearLayout>
+
+    </ViewFlipper>
 
 </FrameLayout>
