--- a/app/src/main/res/layout/numb_pad.xml
+++ b/app/src/main/res/layout/numb_pad.xml
@@ -19,7 +19,7 @@
             android:textSize="35dp" />
     </LinearLayout>-->
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -33,7 +33,7 @@
             android:textColor="@android:color/white"
             android:layout_marginTop="10dp" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,11 +50,6 @@
             android:gravity="center" />
 
     </LinearLayout>
-
-    <!--<FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" >-->
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -239,7 +234,5 @@
 
             </LinearLayout>
         </LinearLayout>
-
-    <!--</FrameLayout>-->
 
 </LinearLayout>
