--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -4,7 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/list_row_selector"
     android:padding="8dp">
 
     <!-- Name of User -->
@@ -12,12 +11,13 @@
         android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="17sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
         android:textColor="@android:color/white"
-        android:paddingLeft="10dp" />
+        android:gravity="center"
+        android:padding="14dp"
+        android:background="@drawable/list_row_selector" />
 
-    <!-- User's phone number -->
+    <!-- User's phone number
     <TextView
         android:id="@+id/phone_number"
         android:layout_width="fill_parent"
@@ -26,6 +26,6 @@
         android:layout_marginTop="1dip"
         android:textSize="15sp"
         android:textColor="@android:color/white"
-        android:paddingLeft="10dp" />
+        android:paddingLeft="10dp" />-->
 
 </LinearLayout>
