--- a/app/src/main/res/layout/numb_pad.xml
+++ b/app/src/main/res/layout/numb_pad.xml
@@ -19,7 +19,7 @@
             android:textSize="35dp" />
     </LinearLayout>-->
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -33,7 +33,7 @@
             android:textColor="@android:color/white"
             android:layout_marginTop="10dp" />
 
-    </LinearLayout>-->
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -201,8 +201,8 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_marginTop="15dp">
 
                 <Button
@@ -216,7 +216,7 @@
                     android:textColor="@android:color/white"
                     android:layout_weight="0.5"
                     android:layout_marginLeft="3dp"
-                    android:layout_gravity="left" />
+                    android:layout_gravity="left|bottom" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -226,8 +226,7 @@
                     android:textSize="20sp"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="150dp"
-                    android:layout_marginRight="0dp"
-                    android:layout_gravity="right"
+                    android:layout_gravity="bottom|right"
                     android:textColor="@android:color/white"
                     android:layout_weight="0.5"
                     android:background="@drawable/button_black_white_rect" />
